style.css
@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    
}

body {
    background: linear-gradient(45deg, white, rgb(255, 138, 43));
}

.container {
    height: 100vh;
    background: url(Assets/bg.png);
    background-size: cover;
}

.container--text {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 30vh;
    font-family: 'Merienda', cursive;
    width: 100vw;
    padding: 0 10vw 0 10vw;
}

.container--text h1 {
    font-size: 32px;
    margin: 40px 0;
    text-align: center;
    color: #502400;
}

.container--text h2 {
    font-size: 24px;
    text-align: center;
    color: #502400;
}

.container--btn {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40vh;
    padding: 0 10vw 0 10vw;
}

.success--btn {
    margin: 0 50px;
    text-align: center;
    background: transparent;
    width: 100px;
    padding: 10px 16px;
    border: none;
    border-radius: 6px;
    font-size: 16px;
    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
    background: linear-gradient(rgb(198, 255, 106),lightgreen);
    color:#502400;
    font-family: 'Poppins', sans-serif;
}

.success--btn:hover {
    background: linear-gradient(rgb(149, 255, 49),rgb(121, 196, 121));
}

.success--btn:active {
    transform: translateY(4px);
    box-shadow: 1px 2px black;
}

.error--btn {
    margin: 0 50px;
    text-align: center;
    background: transparent;
    width: 100px;
    padding: 10px 16px;
    border: none;
    border-radius: 6px;
    font-size: 16px;
    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
    background: linear-gradient(rgb(255, 95, 32),rgb(255, 96, 96));
    color:#502400;
    font-family: 'Poppins', sans-serif;
}

.error--btn:hover {
    background: linear-gradient(rgb(255, 87, 35),rgb(255, 79, 79));
}

.error--btn:active {
    transform: translateY(4px);
    box-shadow: 1px 2px black;
}

.container--img {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
    z-index: -10;
}

.toast--img1 {
    position: absolute;
    bottom: -50px;
    left: -100px;
    height:auto;
    width:100px;
    animation: imgAnimate1 40s linear normal infinite;
    z-index: -2;
}

.toast--img2 {
    position: absolute;
    right: 0;
    left: -60px;
    width: 150px;
    animation: imgAnimate2 50s linear normal infinite;
    z-index: -1;
}

.toast--img3 {
    position: absolute;
    bottom: 0;
    right: -90px;
    height:auto;
    width: 60px;
    animation: imgAnimate3 60s linear normal infinite;
    z-index: -3;
}



@keyframes imgAnimate1 {
    from {
        bottom: -100px;
        left: -100px;
        transform: rotate(0);
    }to {
        bottom: calc(100vh + 100px);
        left: calc(100vw + 100px);
        transform: rotate(360deg);
    }
}

@keyframes imgAnimate2 {
    from {
        top: -100px;
        left: -150px;
        transform: rotate(0);
    }to {
        top: calc(100vh + 100px);
        left: calc(100vw + 150px);
        transform: rotate(360deg);
    }
}

@keyframes imgAnimate3 {
    from {
        bottom: -100px;
        right: -50px;
        transform: rotate(0);
    }to {
        bottom: calc(100vh + 100px);
        right: calc(100vw + 50px);
        transform: rotate(360deg);
    }
}



/********** SUCCESS TOASTS **********/

.container-toast-success {
    position: absolute;
    width: 400px;
    padding: 30px 20px;
    bottom: 50px;
    right: 0;
    overflow: hidden;
}

.toast-success-display {
    display: none;
}

.hide-toast-success {
    background: white;
    border-left: 5px solid green;
    border-radius: 5px;
    width: 380px;
    height: 80px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1.2fr 6fr 0.5fr;
    transform: translateX(400px);
    box-shadow: 2px 5px 5px rgb(0, 0, 0, 0.5);
}

.show-toast-success {
    background: white;
    border-left: 5px solid green;
    border-radius: 5px;
    width: 380px;
    height: 80px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1.2fr 6fr 0.5fr;
    transform: translateX(0px);
    transition: 1s;
    box-shadow: 2px 5px 5px rgb(0, 0, 0, 0.5);
}

.toast-success-text {
    font-family: 'Poppins', sans-serif;
}

.toast-success-text p:first-child {
    font-weight: 600;
}

.toast-success-text p:last-child {
    font-size: 12px;
}

#close--btn {
    align-self: flex-start;
    background: transparent;
    border: none;
    font-size: 20px;
    color: gray;
    cursor: pointer;
}


.toast-success-check-icon {
    font-size: 40px;
    color: green;
}

/********** ERROR TOASTS **********/

.container-toast-error {
    position: absolute;
    width: 400px;
    padding: 30px 20px;
    bottom: 50px;
    right: 0;
    overflow: hidden;
}

.hide-toast-error {
    background: white;
    border-left: 5px solid rgb(255, 0, 0);
    border-radius: 5px;
    width: 380px;
    height: 80px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1.2fr 6fr 0.5fr;
    transform: translateX(400px);
    box-shadow: 2px 5px 5px rgb(0, 0, 0, 0.5);
}

.show-toast-error {
    background: white;
    border-left: 5px solid rgb(255, 0, 0);
    border-radius: 5px;
    width: 380px;
    height: 80px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1.2fr 6fr 0.5fr;
    transform: translateX(0);
    box-shadow: 2px 5px 5px rgb(0, 0, 0, 0.5);
    transition: 1s;
}

.toast-error-text {
    font-family: 'Poppins', sans-serif;
}

.toast-error-text p:first-child {
    font-weight: 600;
}

.toast-error-text p:last-child {
    font-size: 12px;
}

.toast--error button {
    align-self: flex-start;
    background: transparent;
    border: none;
    font-size: 20px;
    color: gray;
    cursor: pointer;
}

.toast-error-check-icon {
    font-size: 40px;
    color: rgb(255, 0, 0);
}

.container--footer {
    display: flex;
    justify-content: center;
    width: 100vw;
    height: 30vh;
    align-items: end;


}

.container--footer a img {
    width: 50px;
    margin: 40px 24px;

}

